# ranger-k8s-operator

./: .licenserc.yaml  .trivyignore  .woke.yaml  CATALOG_RECONCILIATION.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
.github/: .copilot-collections.yaml
.github/agents/: charm-engineer.agent.md
.github/workflows/: copilot_collections_update.yaml  integration_test.yaml  promote_charm.yaml  publish_charm.yaml  test.yaml  test_and_publish_charm.yaml
lib/charms/data_platform_libs/v0/: data_interfaces.py
lib/charms/trino_k8s/v0/: trino_catalog.py
ranger_rock/: Makefile  README.md  rockcraft.yaml
ranger_rock/local-files/: admin-entrypoint.sh  usersync-entrypoint.sh
ranger_rock/patches/: 001-jdk21-compatibility.patch  elasticsearch_patch.py
scripts/: import_rock.sh
src/: charm.py  groups.py  literals.py  ranger_client.py  reconcile.py  structured_config.py  utils.py
src/grafana_dashboards/: ranger-monitoring.json.tmpl
src/loki_alert_rules/: README.md
src/relations/: ldap.py  opensearch.py  postgres.py  provider.py  trino.py
templates/: admin-config.jinja  config.jinja  ranger-usersync-config.jinja
tests/: conftest.py
tests/integration/: conftest.py  helpers.py  test_charm.py  test_opensearch.py  test_policy.py  test_scaling.py  test_trino_catalog.py  test_upgrades.py  test_usersync.py
tests/unit/: test_charm.py  test_reconcile.py  test_structured_config.py
