# Copyright 2023 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "ranger-k8s"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "apache-ranger>=0.0.12,<0.1",
    "ops>=3.4.0,<4",
    "Jinja2>=3.1.2,<4",
    "pydantic>=1.10,<2",
    "cosl>=1.4.0,<2",
]

[dependency-groups]
# Dependencies needed by vendored charm libraries at build time
charmlibs-pydeps = [
    "ops>=2.0.0,<4",
    "pydantic>=1.10,<2",
]

fmt = [
    "ruff>=0.15.16,<0.16",
]

lint = [
    "ruff>=0.15.16,<0.16",
    "codespell>=2.2.1,<3",
    "pyright>=1.1.410,<2",
]

unit = [
    "coverage[toml]>=7.14.1,<8",
    "ipdb>=0.13.9,<0.14",
    "pytest>=9.0.3,<10",
]

coverage-report = [
    "coverage[toml]>=7.14.1,<8",
    "pytest>=9.0.3,<10",
]

static = [
    "bandit[toml]>=1.9.4,<2",
]

integration = [
    "ipdb>=0.13.9,<0.14",
    "juju>=3.5.2.1,<4",
    "pytest>=9.0.3,<10",
    "pytest-operator>=0.43.2,<0.44",
    "pytest-asyncio>=0.21.2,<0.22",
]

integration-scenarios = [
    "ipdb>=0.13.9,<0.14",
    "juju>=3.5.2.1,<4",
    "pytest>=9.0.3,<10",
    "pytest-operator>=0.43.2,<0.44",
    "pytest-asyncio>=0.21.2,<0.22",
]

[tool.uv]
package = false
conflicts = [
    [
        { group = "integration" },
        { group = "integration-scenarios" },
    ],
]

# Testing tools configuration
[tool.bandit]
exclude_dirs = ["/venv/"]
[tool.bandit.assert_used]
skips = ["*/*test.py", "*/test_*.py", "*tests/*.py"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Linting tools configuration
[tool.ruff]
line-length = 79
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
ignore = [
    "E501",
    "D107",
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "D103", "D104"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
pythonVersion = "3.10"
# TODO (mertalpt): Enable type checking with the relevant refactoring task.
typeCheckingMode = "off"

[tool.codespell]
skip = "build,lib,venv,.venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"
